packages/isar_db/test/errors/id/missing.dart
// no id property defined

import 'package:isar_db/isar_db.dart';

@collection
class Test {
  late int notId;

  late String name;
}
